RM-3063: fix sonar warnings in unit tests, suppress where required